--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <link rel="stylesheet" href="css/calendar.clean-code.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
+    <link rel="stylesheet" href="css/calendar.coconut-islands.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
     <link rel="stylesheet" href="css/calendar.collaboration-idea.css">
     <link rel="stylesheet" href="css/calendar.color-symphony.css">
@@ -710,6 +711,7 @@
                 <option value="clean-code">Clean Code</option>
                 <option value="clean-energy">Clean Energy</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
+                <option value="coconut-islands">Coconut Islands</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
                 <option value="collaboration-idea">Collaboration Idea</option>
                 <option value="color-symphony">Color Symphony</option>
