--- a/index.html
+++ b/index.html
@@ -378,6 +378,7 @@
     <link rel="stylesheet" href="css/calendar.twilight-garden.css">
     <link rel="stylesheet" href="css/calendar.unforgettable-moments.css">
     <link rel="stylesheet" href="css/calendar.unseen-wonders.css">
+    <link rel="stylesheet" href="css/calendar.untouched-paradise.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
@@ -985,6 +986,7 @@
                 <option value="twilight-garden">Twilight Garden</option>
                 <option value="unforgettable-moments">Unforgettable Moments</option>
                 <option value="unseen-wonders">Unseen Wonders</option>
+                <option value="untouched-paradise">Untouched Paradise</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="velvety-dark">Velvety Dark</option>
                 <option value="viking-helmet">Viking Helmet</option>
