--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
     <link rel="stylesheet" href="css/calendar.small-happiness.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
+    <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
     <link rel="stylesheet" href="css/calendar.spring-meadow.css">
     <link rel="stylesheet" href="css/calendar.spring-silence.css">
     <link rel="stylesheet" href="css/calendar.statue-of-liberty.css">
@@ -937,6 +938,7 @@
                 <option value="small-happiness">Small Happiness</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
+                <option value="spark-of-knowledge">Spark of Knowledge</option>
                 <option value="spring-meadow">Spring Meadow</option>
                 <option value="spring-silence">Spring Silence</option>
                 <option value="statue-of-liberty">Statue of Liberty</option>
