--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
+    <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
@@ -760,6 +761,7 @@
                 <option value="dream-adventure">Dream Adventure</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="emerald-stream">Emerald Stream</option>
+                <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="essential-oils">Essential Oils</option>
                 <option value="everest-view">Everest View</option>
