--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
     <link rel="stylesheet" href="css/calendar.time-machine.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
+    <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
     <link rel="stylesheet" href="css/calendar.tropical-nature.css">
     <link rel="stylesheet" href="css/calendar.tropical-sunset.css">
     <link rel="stylesheet" href="css/calendar.turquoise-frontier.css">
@@ -984,6 +985,7 @@
                 <option value="time-machine">Time Machine</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="tropical-islands">Tropical Islands</option>
+                <option value="tropical-jungle">Tropical Jungle</option>
                 <option value="tropical-nature">Tropical Nature</option>
                 <option value="tropical-sunset">Tropical Sunset</option>
                 <option value="turquoise-frontier">Turquoise Frontier</option>
