--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="css/calendar.a-desert-island.css">
     <link rel="stylesheet" href="css/calendar.adriatic-sea.css">
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
+    <link rel="stylesheet" href="css/calendar.a-good-chapter.css">
     <link rel="stylesheet" href="css/calendar.a-good-idea.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.alone-in-paradise.css">
@@ -639,6 +640,7 @@
                 <option value="a-desert-island">A Desert Island</option>
                 <option value="adriatic-sea">Adriatic Sea</option>
                 <option value="a-forward-move">A Forward Move</option>
+                <option value="a-good-chapter">A Good Chapter</option>
                 <option value="a-good-idea">A Good Idea</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alone-in-paradise">Alone in Paradise</option>
