--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
     <link rel="stylesheet" href="css/calendar.diamond-planet.css">
     <link rel="stylesheet" href="css/calendar.different-perspective.css">
     <link rel="stylesheet" href="css/calendar.digital-excellence.css">
+    <link rel="stylesheet" href="css/calendar.digital-progress.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
@@ -750,6 +751,7 @@
                 <option value="diamond-planet">Diamond Planet</option>
                 <option value="different-perspective">Different Perspective</option>
                 <option value="digital-excellence">Digital Excellence</option>
+                <option value="digital-progress">Digital Progress</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
                 <option value="doterra-black">DōTERRA Black</option>
