--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <link rel="stylesheet" href="css/calendar.shades-of-blue.css">
     <link rel="stylesheet" href="css/calendar.shaolin-monastery.css">
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
+    <link rel="stylesheet" href="css/calendar.significant-improvement.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.sky-hawk.css">
@@ -938,6 +939,7 @@
                 <option value="shades-of-blue">Shades Of Blue</option>
                 <option value="shaolin-monastery">Shaolin Monastery</option>
                 <option value="shift-in-perception">Shift in Perception</option>
+                <option value="significant-improvement">Significant Improvement</option>
                 <option value="silicon-valley">Silicon Valley</option>
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="sky-hawk">Sky Hawk</option>
