--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
+    <link rel="stylesheet" href="css/calendar.pink-flamingo.css">
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
     <link rel="stylesheet" href="css/calendar.pink-lake.css">
     <link rel="stylesheet" href="css/calendar.pirate-ship.css">
@@ -901,6 +902,7 @@
                 <option value="overnight-train">Overnight Train</option>
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pacific-ocean">Pacific Ocean</option>
+                <option value="pink-flamingo">Pink Flamingo</option>
                 <option value="pink-lady">Pink Lady</option>
                 <option value="pink-lake">Pink Lake</option>
                 <option value="pirate-ship">Pirate Ship</option>
