--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     <link rel="stylesheet" href="css/calendar.black-style.css">
     <link rel="stylesheet" href="css/calendar.black-velvet.css">
     <link rel="stylesheet" href="css/calendar.black-violet.css">
+    <link rel="stylesheet" href="css/calendar.blue-banana.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
     <link rel="stylesheet" href="css/calendar.blue-frost.css">
     <link rel="stylesheet" href="css/calendar.blue-gold.css">
@@ -686,6 +687,7 @@
                 <option value="black-style">Black Style</option>
                 <option value="black-velvet">Black Velvet</option>
                 <option value="black-violet">Black Violet</option>
+                <option value="blue-banana">Blue Banana</option>
                 <option value="blue-bird">Blue Bird</option>
                 <option value="blue-frost">Blue Frost</option>
                 <option value="blue-gold">Blue & Gold</option>
