--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
+    <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.lemon-lime.css">
@@ -842,6 +843,7 @@
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
+                <option value="lady-blue">Lady Blue</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="lemon-lime">Lemon Lime</option>
