--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
     <link rel="stylesheet" href="css/calendar.american-dream.css">
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
+    <link rel="stylesheet" href="css/calendar.a-new-chapter.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
@@ -658,6 +659,7 @@
                 <option value="amazon-river">Amazon River</option>
                 <option value="american-dream">American Dream</option>
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
+                <option value="a-new-chapter">A New Chapter</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="arctic-glow">Arctic Glow</option>
