--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     <link rel="stylesheet" href="css/calendar.game-changer.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
+    <link rel="stylesheet" href="css/calendar.global-impact.css">
     <link rel="stylesheet" href="css/calendar.glorious-day.css">
     <link rel="stylesheet" href="css/calendar.golden-century.css">
     <link rel="stylesheet" href="css/calendar.golden-coast.css">
@@ -799,6 +800,7 @@
                 <option value="game-changer">Game Changer</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
+                <option value="global-impact">Global Impact</option>
                 <option value="glorious-day">Glorious Day</option>
                 <option value="golden-century">Golden Century</option>
                 <option value="golden-coast">Gold Coast</option>
