--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.away-from-home.css">
     <link rel="stylesheet" href="css/calendar.back-on-track.css">
+    <link rel="stylesheet" href="css/calendar.back-to-paradise.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
     <link rel="stylesheet" href="css/calendar.battle-of-the-ice.css">
     <link rel="stylesheet" href="css/calendar.bermuda-triangle.css">
@@ -670,6 +671,7 @@
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="away-from-home">Away From Home</option>
                 <option value="back-on-track">Back on Track</option>
+                <option value="back-to-paradise">Back to Paradadise</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
                 <option value="battle-of-the-ice">Battle of the Ice</option>
                 <option value="bermuda-triangle">Bermuda Triangle</option>
