--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <link rel="stylesheet" href="css/calendar.new-black.css">
     <link rel="stylesheet" href="css/calendar.new-millenium.css">
     <link rel="stylesheet" href="css/calendar.new-style.css">
-    <link rel="stylesheet" href="css/calendar.next-step.css">
+    <link rel="stylesheet" href="css/calendar.next-steps.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
@@ -891,7 +891,7 @@
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
                 <option value="new-millenium">New Millenium</option>
-                <option value="next-step">Next Step</option>
+                <option value="next-steps">Next Steps</option>
                 <option value="new-style">New Style</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
