--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
+    <link rel="stylesheet" href="css/calendar.sea-breeze.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
@@ -946,6 +947,7 @@
                 <option value="robin-good">Robin Good</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="science-fiction">Science Fiction</option>
+                <option value="sea-breeze">Sea Breeze</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="sea-star">Sea Star</option>
