--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
     <link rel="stylesheet" href="css/calendar.art-studio.css">
+    <link rel="stylesheet" href="css/calendar.a-simple-task.css">
     <link rel="stylesheet" href="css/calendar.a-thing-of-beauty.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.away-from-home.css">
@@ -671,6 +672,7 @@
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
                 <option value="art-studio">Art Studio</option>
+                <option value="a-simple-task">A Simple Task</option>
                 <option value="a-thing-of-beauty">A Thing of Beauty</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="away-from-home">Away From Home</option>
