--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
     <link rel="stylesheet" href="css/calendar.luxury-design.css">
+    <link rel="stylesheet" href="css/calendar.luxury-life.css">
     <link rel="stylesheet" href="css/calendar.macaroni-penguin.css">
     <link rel="stylesheet" href="css/calendar.magellanic-penguin.css">
     <link rel="stylesheet" href="css/calendar.magic-colors.css">
@@ -871,6 +872,7 @@
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
                 <option value="luxury-design">Luxury Design</option>
+                <option value="luxury-life">Luxury Life</option>
                 <option value="macaroni-penguin">Macaroni Penguin</option>
                 <option value="magellanic-penguin">Magellanic Penguin</option>
                 <option value="magic-colors">Magic Colors</option>
