--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
     <link rel="stylesheet" href="css/calendar.world-champion.css">
+    <link rel="stylesheet" href="css/calendar.work-of-art.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
 
     <!-- Custom Styles -->
@@ -1039,6 +1040,7 @@
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="wonderful-experience">Wonderful Experience</option>
                 <option value="world-champion">World Champion</option>
+                <option value="work-of-art">Work of Art</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
             </select>
         </div>
