--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
+    <link rel="stylesheet" href="css/calendar.last-chance.css">
     <link rel="stylesheet" href="css/calendar.lavender-bliss.css">
     <link rel="stylesheet" href="css/calendar.lemongrass-sky.css">
     <link rel="stylesheet" href="css/calendar.lemon-lime.css">
@@ -861,6 +862,7 @@
                 <option value="keep-on-smiling">Keep on Smiling</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lady-blue">Lady Blue</option>
+                <option value="last-chance">Last Chance</option>
                 <option value="lavender-bliss">Lavender Bliss</option>
                 <option value="lemongrass-sky">Lemongrass Sky</option>
                 <option value="lemon-lime">Lemon Lime</option>
