--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
+    <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-hidden-jem.css">
@@ -1003,6 +1004,7 @@
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-element-of-surprise">The Element of Surprise</option>
+                <option value="the-final-step">The Final Step</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-hidden-jem">The Hidden Jem</option>
