--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
     <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
+    <link rel="stylesheet" href="css/calendar.love-and-passion.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
@@ -873,6 +874,7 @@
                 <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
+                <option value="love-and-passion">𝐋𝐨𝐯𝐞 & 𝐏𝐚𝐬𝐬𝐢𝐨𝐧</option>
                 <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
