--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
     <link rel="stylesheet" href="css/calendar.red-lake.css">
     <link rel="stylesheet" href="css/calendar.red-squirrel.css">
     <link rel="stylesheet" href="css/calendar.remote-island.css">
+    <link rel="stylesheet" href="css/calendar.right-on-track.css">
     <link rel="stylesheet" href="css/calendar.rising-sun.css">
     <link rel="stylesheet" href="css/calendar.robin-good.css">
     <link rel="stylesheet" href="css/calendar.royal-caribbean.css">
@@ -957,6 +958,7 @@
                 <option value="red-lake">Red Lake</option>
                 <option value="red-squirrel">Red Squirrel</option>
                 <option value="remote-island">Remote Island</option>
+                <option value="right-on-track">Right on Track</option>
                 <option value="rising-sun">Rising Sun</option>
                 <option value="robin-good">Robin Good</option>
                 <option value="royal-caribbean">Royal Caribbean</option>
