--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
     <link rel="stylesheet" href="css/calendar.samurai-path.css">
     <link rel="stylesheet" href="css/calendar.science-fiction.css">
     <link rel="stylesheet" href="css/calendar.sea-breeze.css">
+    <link rel="stylesheet" href="css/calendar.seabreeze-avenue.css">
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
@@ -964,6 +965,7 @@
                 <option value="royal-caribbean">Royal Caribbean</option>
                 <option value="science-fiction">Science Fiction</option>
                 <option value="sea-breeze">Sea Breeze</option>
+                <option value="seabreeze-avenue">Seabreeze Avenue</option>
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="sea-star">Sea Star</option>
