--- a/index.html
+++ b/index.html
@@ -386,6 +386,7 @@
     <link rel="stylesheet" href="css/calendar.the-last-paradise.css">
     <link rel="stylesheet" href="css/calendar.the-modern-developer.css">
     <link rel="stylesheet" href="css/calendar.the-perfect-blend.css">
+    <link rel="stylesheet" href="css/calendar.the-real-luxury.css">
     <link rel="stylesheet" href="css/calendar.the-silver-sword.css">
     <link rel="stylesheet" href="css/calendar.the-spirit-of-innovation.css">
     <link rel="stylesheet" href="css/calendar.the-unstoppable-mindset.css">
@@ -1020,6 +1021,7 @@
                 <option value="the-last-paradise">The Last Paradise</option>
                 <option value="the-modern-developer">The Modern Developer</option>
                 <option value="the-perfect-blend">The Perfect Blend</option>
+                <option value="the-real-luxury">The Real Luxury</option>
                 <option value="samurai-path">The Samurai's Path</option>
                 <option value="the-silver-sword">The Silver Sword</option>
                 <option value="the-spirit-of-innovation">The Spirit of Innovation</option>
