--- a/index.html
+++ b/index.html
@@ -419,6 +419,7 @@
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
     <link rel="stylesheet" href="css/calendar.world-champion.css">
     <link rel="stylesheet" href="css/calendar.work-of-art.css">
+    <link rel="stylesheet" href="css/calendar.your-wildest-dreams.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-guess.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
 
@@ -1056,6 +1057,7 @@
                 <option value="wonderful-experience">Wonderful Experience</option>
                 <option value="world-champion">World Champion</option>
                 <option value="work-of-art">Work of Art</option>
+                <option value="your-wildest-dreams">Your Wildest Dreams</option>
                 <option value="your-wildest-guess">Your Wildest Guess</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
             </select>
