--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <link rel="stylesheet" href="css/calendar.art-studio.css">
     <link rel="stylesheet" href="css/calendar.a-simple-task.css">
     <link rel="stylesheet" href="css/calendar.a-thing-of-beauty.css">
+    <link rel="stylesheet" href="css/calendar.a-turning-point.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.away-from-home.css">
     <link rel="stylesheet" href="css/calendar.back-on-track.css">
@@ -685,6 +686,7 @@
                 <option value="art-studio">Art Studio</option>
                 <option value="a-simple-task">A Simple Task</option>
                 <option value="a-thing-of-beauty">A Thing of Beauty</option>
+                <option value="a-turning-point">A Turning Point</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="away-from-home">Away From Home</option>
                 <option value="back-on-track">Back on Track</option>
