--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
     <link rel="stylesheet" href="css/calendar.sea-diamonds.css">
     <link rel="stylesheet" href="css/calendar.sea-lions.css">
     <link rel="stylesheet" href="css/calendar.sea-star.css">
+    <link rel="stylesheet" href="css/calendar.secret-item.css">
     <link rel="stylesheet" href="css/calendar.secret-night.css">
     <link rel="stylesheet" href="css/calendar.secretive-ninja.css">
     <link rel="stylesheet" href="css/calendar.selfless-programmer.css">
@@ -974,6 +975,7 @@
                 <option value="sea-diamonds">Sea Diamonds</option>
                 <option value="sea-lions">Sea Lions</option>
                 <option value="sea-star">Sea Star</option>
+                <option value="secret-item">Secret Item</option>
                 <option value="secret-night">Secret Night</option>
                 <option value="secretive-ninja">Secretive Ninja</option>
                 <option value="selfless-programmer">Selfless Programmer</option>
