--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <link rel="stylesheet" href="css/calendar.blue-white.css">
     <link rel="stylesheet" href="css/calendar.blue-window.css">
     <link rel="stylesheet" href="css/calendar.bold-vision.css">
+    <link rel="stylesheet" href="css/calendar.box-of-surprises.css">
     <link rel="stylesheet" href="css/calendar.breaking-point.css">
     <link rel="stylesheet" href="css/calendar.breathtaking-view.css">
     <link rel="stylesheet" href="css/calendar.bright-line.css">
@@ -726,6 +727,7 @@
                 <option value="blue-white">Blue & White</option>
                 <option value="blue-window">Blue Window</option>
                 <option value="bold-vision">Bold Vision</option>
+                <option value="box-of-surprises">Box of Surprises</option>
                 <option value="breaking-point">Breaking Point</option>
                 <option value="breathtaking-view">Breathtaking View</option>
                 <option value="bright-line">Bright Line</option>
