--- a/index.html
+++ b/index.html
@@ -296,6 +296,7 @@
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
+    <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
@@ -937,6 +938,7 @@
                 <option value="on-the-island">On the Island</option>
                 <option value="orange-country">Orange Country</option>
                 <option value="orion-constellation">Orion Constellation</option>
+                <option value="out-of-the-box">Out of the Box</option>
                 <option value="overnight-train">Overnight Train</option>
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pacific-ocean">Pacific Ocean</option>
