--- a/index.html
+++ b/index.html
@@ -285,6 +285,7 @@
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
     <link rel="stylesheet" href="css/calendar.north-pole-icebreaker.css">
+    <link rel="stylesheet" href="css/calendar.now-is-your-moment.css">
     <link rel="stylesheet" href="css/calendar.oceanfront-elegance.css">
     <link rel="stylesheet" href="css/calendar.ocean-parkway.css">
     <link rel="stylesheet" href="css/calendar.ocean-surf.css">
@@ -928,6 +929,7 @@
                 <option value="northern-nights">Northern Nights</option>
                 <option value="north-pole">North Pole</option>
                 <option value="north-pole-icebreaker">North Pole Icebreaker</option>
+                <option value="now-is-your-moment">NOW is Your Moment</option>
                 <option value="oceanfront-elegance">Oceanfront Elegance</option>
                 <option value="ocean-parkway">Ocean Parkway</option>
                 <option value="ocean-surf">Ocean Surf</option>
