--- a/index.html
+++ b/index.html
@@ -400,6 +400,7 @@
     <link rel="stylesheet" href="css/calendar.tide-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.time-complexity.css">
     <link rel="stylesheet" href="css/calendar.time-machine.css">
+    <link rel="stylesheet" href="css/calendar.time-to-chill.css">
     <link rel="stylesheet" href="css/calendar.tokyo-at-night.css">
     <link rel="stylesheet" href="css/calendar.tropical-islands.css">
     <link rel="stylesheet" href="css/calendar.tropical-jungle.css">
@@ -1044,6 +1045,7 @@
                 <option value="tide-of-dreams">Tide of Dreams</option>
                 <option value="time-complexity">Time Complexity</option>
                 <option value="time-machine">Time Machine</option>
+                <option value="time-to-chill">Time to Chill</option>
                 <option value="tokyo-at-night">Tokyo at Night</option>
                 <option value="tropical-islands">Tropical Islands</option>
                 <option value="tropical-jungle">Tropical Jungle</option>
