--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-power.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
+    <link rel="stylesheet" href="css/calendar.dramatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
@@ -800,6 +801,7 @@
                 <option value="doterra-power">DōTERRA Power</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
+                <option value="dramatic-coastline">Dramatic Coastline</option>
                 <option value="dream-adventure">Dream Adventure</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="emerald-stream">Emerald Stream</option>
