--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <link rel="stylesheet" href="css/calendar.a-turning-point.css">
     <link rel="stylesheet" href="css/calendar.autumn-harvest.css">
     <link rel="stylesheet" href="css/calendar.away-from-home.css">
+    <link rel="stylesheet" href="css/calendar.a-world-beyond-borders.css">
     <link rel="stylesheet" href="css/calendar.back-on-track.css">
     <link rel="stylesheet" href="css/calendar.back-to-paradise.css">
     <link rel="stylesheet" href="css/calendar.bamboo-flute.css">
@@ -696,6 +697,7 @@
                 <option value="a-turning-point">A Turning Point</option>
                 <option value="autumn-harvest">Autumn Harvest</option>
                 <option value="away-from-home">Away From Home</option>
+                <option value="a-world-beyond-borders">A World beyond Borders</option>
                 <option value="back-on-track">Back on Track</option>
                 <option value="back-to-paradise">Back to Paradadise</option>
                 <option value="bamboo-flute">Bamboo Flute</option>
