--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/calendar.american-dream.css">
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
     <link rel="stylesheet" href="css/calendar.a-new-chapter.css">
+    <link rel="stylesheet" href="css/calendar.a-new-opportunity.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
@@ -687,6 +688,7 @@
                 <option value="american-dream">American Dream</option>
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
                 <option value="a-new-chapter">A New Chapter</option>
+                <option value="a-new-opportunity">A New Opportunity</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
                 <option value="arctic-glow">Arctic Glow</option>
