--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     <link rel="stylesheet" href="css/calendar.great-lakes.css">
     <link rel="stylesheet" href="css/calendar.green-city.css">
     <link rel="stylesheet" href="css/calendar.green-coffee.css">
+    <link rel="stylesheet" href="css/calendar.green-heaven.css">
     <link rel="stylesheet" href="css/calendar.greenland-icebergs.css">
     <link rel="stylesheet" href="css/calendar.green-light.css">
     <link rel="stylesheet" href="css/calendar.green-tea.css">
@@ -851,6 +852,7 @@
                 <option value="great-lakes">Great Lakes</option>
                 <option value="green-city">Green City</option>
                 <option value="green-coffee">Green Coffee</option>
+                <option value="green-heaven">Green Heaven</option>
                 <option value="greenland-icebergs">Greenland’s Icebergs</option>
                 <option value="green-light">Green Light</option>
                 <option value="green-tea">Green Tea</option>
