--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
     <link rel="stylesheet" href="css/calendar.positive-energy.css">
     <link rel="stylesheet" href="css/calendar.power-play.css">
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
+    <link rel="stylesheet" href="css/calendar.practice-makes-perfect.css">
     <link rel="stylesheet" href="css/calendar.precious-question.css">
     <link rel="stylesheet" href="css/calendar.progressive-decision.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
@@ -968,6 +969,7 @@
                 <option value="positive-energy">Positive Energy</option>
                 <option value="power-play">Power Play</option>
                 <option value="practical-experience">Practical Experience</option>
+                <option value="practice-makes-perfect">Practice Makes Perfect</option>
                 <option value="precious-question">Precious Question</option>
                 <option value="progressive-decision">Progressive Decision</option>
                 <option value="pure-light">Pure Light</option>
