--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
+    <link rel="stylesheet" href="css/calendar.every-little-step-counts.css">
     <link rel="stylesheet" href="css/calendar.excellent-performance.css">
     <link rel="stylesheet" href="css/calendar.executive-management.css">
     <link rel="stylesheet" href="css/calendar.exotic-island.css">
@@ -817,6 +818,7 @@
                 <option value="emperor-penguin">Emperor Penguin</option>
                 <option value="essential-oils">Essential Oils</option>
                 <option value="everest-view">Everest View</option>
+                <option value="every-little-step-counts">Every Little Step Counts</option>
                 <option value="excellent-performance">Excellent Performance</option>
                 <option value="executive-management">Executive Management</option>
                 <option value="exotic-island">Exotic Island</option>
