--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.game-changer.css">
+    <link rel="stylesheet" href="css/calendar.games-are-fun.css">
     <link rel="stylesheet" href="css/calendar.genghis-khan-arrow.css">
     <link rel="stylesheet" href="css/calendar.giant-petrel.css">
     <link rel="stylesheet" href="css/calendar.global-impact.css">
@@ -839,6 +840,7 @@
                 <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="game-changer">Game Changer</option>
+                <option value="games-are-fun">Games are Fun</option>
                 <option value="genghis-khan-arrow">Genghis Khan's Arrow</option>
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="global-impact">Global Impact</option>
