--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
+    <link rel="stylesheet" href="css/calendar.enjoy-the-journey.css">
     <link rel="stylesheet" href="css/calendar.essential-oils.css">
     <link rel="stylesheet" href="css/calendar.everest-view.css">
     <link rel="stylesheet" href="css/calendar.every-little-step-counts.css">
@@ -819,6 +820,7 @@
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
+                <option value="enjoy-the-journey">Enjoy the Journey</option>
                 <option value="essential-oils">Essential Oils</option>
                 <option value="everest-view">Everest View</option>
                 <option value="every-little-step-counts">Every Little Step Counts</option>
