--- a/index.html
+++ b/index.html
@@ -365,6 +365,7 @@
     <link rel="stylesheet" href="css/calendar.sky-hawk.css">
     <link rel="stylesheet" href="css/calendar.skylight-window.css">
     <link rel="stylesheet" href="css/calendar.small-happiness.css">
+    <link rel="stylesheet" href="css/calendar.small-success.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
     <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
@@ -1021,6 +1022,7 @@
                 <option value="sky-hawk">Sky Hawk</option>
                 <option value="skylight-window">Skylight Window</option>
                 <option value="small-happiness">Small Happiness</option>
+                <option value="small-success">Small Success</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
                 <option value="spark-of-knowledge">Spark of Knowledge</option>
