--- a/index.html
+++ b/index.html
@@ -381,6 +381,7 @@
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
     <link rel="stylesheet" href="css/calendar.strength-of-spirit.css">
+    <link rel="stylesheet" href="css/calendar.strong-foundation.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
@@ -1038,6 +1039,7 @@
                 <option value="strategic-planning">Strategic Planning</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
                 <option value="strength-of-spirit">Strength of Spirit</option>
+                <option value="strong-foundation">Strong Foundation</option>
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
