--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
+    <link rel="stylesheet" href="css/calendar.fun-activity.css">
     <link rel="stylesheet" href="css/calendar.galactic-glow.css">
     <link rel="stylesheet" href="css/calendar.game-changer.css">
     <link rel="stylesheet" href="css/calendar.games-are-fun.css">
@@ -844,6 +845,7 @@
                 <option value="fresh-start">Fresh Start</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
+                <option value="fun-activity">Fun Activity</option>
                 <option value="galactic-glow">Galactic Glow</option>
                 <option value="game-changer">Game Changer</option>
                 <option value="games-are-fun">Games are Fun</option>
