--- a/index.html
+++ b/index.html
@@ -234,8 +234,9 @@
     <link rel="stylesheet" href="css/calendar.intelligence-quotient.css">
     <link rel="stylesheet" href="css/calendar.into-the-jungle.css">
     <link rel="stylesheet" href="css/calendar.into-the-night.css">
-    <link rel="stylesheet" href="css/calendar.island-breeze.css">
     <link rel="stylesheet" href="css/calendar.invincible-zone.css">
+    <link rel="stylesheet" href="css/calendar.island-breeze.css">
+    <link rel="stylesheet" href="css/calendar.island-of-rainbows.css">
     <link rel="stylesheet" href="css/calendar.japan-emperor.css">
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
     <link rel="stylesheet" href="css/calendar.keep-it-simple.css">
@@ -895,8 +896,9 @@
                 <option value="intelligence-quotient">Intelligence Quotient</option>
                 <option value="into-the-jungle">Into the Jungle</option>
                 <option value="into-the-night">Into the Night</option>
-                <option value="island-breeze">Island Breeze</option>
                 <option value="invincible-zone">Invincible Zone</option>
+                <option value="island-breeze">Island Breeze</option>
+                <option value="island-of-rainbows">Island of Rainbows</option>
                 <option value="japan-emperor">Japan's Emperor</option>
                 <option value="jungle-nature">Jungle Nature</option>
                 <option value="keep-it-simple">Keep it Simple</option>
