--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
+    <link rel="stylesheet" href="css/calendar.the-desert-line.css">
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
@@ -1057,6 +1058,7 @@
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-dead-sea">The Dead Sea</option>
+                <option value="the-desert-line">The Desert Line</option>
                 <option value="the-element-of-surprise">The Element of Surprise</option>
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
