--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
     <link rel="stylesheet" href="css/calendar.formula-one.css">
     <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
+    <link rel="stylesheet" href="css/calendar.frontier-unknown.css">
     <link rel="stylesheet" href="css/calendar.frozen-wilderness.css">
     <link rel="stylesheet" href="css/calendar.full-pink-moon.css">
     <link rel="stylesheet" href="css/calendar.fun-activity.css">
@@ -848,6 +849,7 @@
                 <option value="formula-one">Formula One</option>
                 <option value="free-flight">Free Flight</option>
                 <option value="fresh-start">Fresh Start</option>
+                <option value="frontier-unknown">Frontier Unknown</option>
                 <option value="frozen-wilderness">Frozen Wilderness</option>
                 <option value="full-pink-moon">Full Pink Moon</option>
                 <option value="fun-activity">Fun Activity</option>
