--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
     <link rel="stylesheet" href="css/calendar.untouched-paradise.css">
     <link rel="stylesheet" href="css/calendar.urban-fashion.css">
     <link rel="stylesheet" href="css/calendar.velvety-dark.css">
+    <link rel="stylesheet" href="css/calendar.vibrant-colors.css">
     <link rel="stylesheet" href="css/calendar.viking-helmet.css">
     <link rel="stylesheet" href="css/calendar.viktoria-falls.css">
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
@@ -1098,6 +1099,7 @@
                 <option value="untouched-paradise">Untouched Paradise</option>
                 <option value="urban-fashion">Urban Fashion</option>
                 <option value="velvety-dark">Velvety Dark</option>
+                <option value="vibrant-colors">Vibrant Colors</option>
                 <option value="viking-helmet">Viking Helmet</option>
                 <option value="viktoria-falls">Viktoria Falls</option>
                 <option value="weekend-downtime">Weekend Downtime</option>
