--- a/index.html
+++ b/index.html
@@ -439,6 +439,7 @@
     <link rel="stylesheet" href="css/calendar.weekend-downtime.css">
     <link rel="stylesheet" href="css/calendar.weekend-mindset.css">
     <link rel="stylesheet" href="css/calendar.white-shark.css">
+    <link rel="stylesheet" href="css/calendar.white-steamboat.css">
     <link rel="stylesheet" href="css/calendar.white-sun-of-the-desert.css">
     <link rel="stylesheet" href="css/calendar.wild-flower.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
@@ -1105,6 +1106,7 @@
                 <option value="weekend-downtime">Weekend Downtime</option>
                 <option value="weekend-mindset">Weekend Mindset</option>
                 <option value="white-shark">White Shark</option>
+                <option value="white-steamboat">White Steamboat</option>
                 <option value="white-sun-of-the-desert">White Sun of the Desert</option>
                 <option value="wild-flower">Wild Flower</option>
                 <option value="wild-rose">Wild Rose</option>
