--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
     <link rel="stylesheet" href="css/calendar.jungle-nature.css">
     <link rel="stylesheet" href="css/calendar.keep-it-simple.css">
     <link rel="stylesheet" href="css/calendar.keep-on-smiling.css">
+    <link rel="stylesheet" href="css/calendar.keep-shining.css">
     <link rel="stylesheet" href="css/calendar.kilimanjaro-outskirts.css">
     <link rel="stylesheet" href="css/calendar.lady-blue.css">
     <link rel="stylesheet" href="css/calendar.last-chance.css">
@@ -912,6 +913,7 @@
                 <option value="jungle-nature">Jungle Nature</option>
                 <option value="keep-it-simple">Keep it Simple</option>
                 <option value="keep-on-smiling">Keep on Smiling</option>
+                <option value="keep-shining">Keep Shining</option>
                 <option value="kilimanjaro-outskirts">Kilimanjaro Outskirts</option>
                 <option value="lady-blue">Lady Blue</option>
                 <option value="last-chance">Last Chance</option>
