--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
     <link rel="stylesheet" href="css/calendar.city-of-night.css">
     <link rel="stylesheet" href="css/calendar.clean-code.css">
     <link rel="stylesheet" href="css/calendar.clean-energy.css">
+    <link rel="stylesheet" href="css/calendar.coastal-beauty.css">
     <link rel="stylesheet" href="css/calendar.coastal-pacific.css">
     <link rel="stylesheet" href="css/calendar.coconut-islands.css">
     <link rel="stylesheet" href="css/calendar.coffee-for-leaders.css">
@@ -780,6 +781,7 @@
                 <option value="city-of-night">City of Night</option>
                 <option value="clean-code">Clean Code</option>
                 <option value="clean-energy">Clean Energy</option>
+                <option value="coastal-beauty">Coastal Beauty</option>
                 <option value="coastal-pacific">Coastal Pacific</option>
                 <option value="coconut-islands">Coconut Islands</option>
                 <option value="coffee-for-leaders">Coffee for Leaders</option>
