--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
     <link rel="stylesheet" href="css/calendar.black-violet.css">
     <link rel="stylesheet" href="css/calendar.blue-banana.css">
     <link rel="stylesheet" href="css/calendar.blue-bird.css">
+    <link rel="stylesheet" href="css/calendar.blue-bliss.css">
     <link rel="stylesheet" href="css/calendar.blue-frost.css">
     <link rel="stylesheet" href="css/calendar.blue-gold.css">
     <link rel="stylesheet" href="css/calendar.blue-ice.css">
@@ -748,6 +749,7 @@
                 <option value="black-violet">Black Violet</option>
                 <option value="blue-banana">Blue Banana</option>
                 <option value="blue-bird">Blue Bird</option>
+                <option value="blue-bliss">Blue Bliss</option>
                 <option value="blue-frost">Blue Frost</option>
                 <option value="blue-gold">Blue & Gold</option>
                 <option value="blue-ice">Blue Ice</option>
