--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
     <link rel="stylesheet" href="css/calendar.green-light.css">
     <link rel="stylesheet" href="css/calendar.green-tea.css">
     <link rel="stylesheet" href="css/calendar.greyscale.css">
+    <link rel="stylesheet" href="css/calendar.group-11.css">
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     <link rel="stylesheet" href="css/calendar.hidden-paradise.css">
@@ -888,6 +889,7 @@
                 <option value="green-light">Green Light</option>
                 <option value="green-tea">Green Tea</option>
                 <option value="greyscale">Greyscale</option>
+                <option value="group-11">Group 11</option>
                 <option value="guangzhou-lights">Guangzhou Lights</option>
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hidden-paradise">Hidden Paradise</option>
