--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <link rel="stylesheet" href="css/calendar.be-yourself.css">
     <link rel="stylesheet" href="css/calendar.big-dream.css">
     <link rel="stylesheet" href="css/calendar.big-fashion.css">
+    <link rel="stylesheet" href="css/calendar.big-pacific.css">
     <link rel="stylesheet" href="css/calendar.black-bird.css">
     <link rel="stylesheet" href="css/calendar.black-coffee.css">
     <link rel="stylesheet" href="css/calendar.black-fashion.css">
@@ -163,6 +164,7 @@
     <link rel="stylesheet" href="css/calendar.dramatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
+    <link rel="stylesheet" href="css/calendar.early-dreams.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
     <link rel="stylesheet" href="css/calendar.emerald-water.css">
     <link rel="stylesheet" href="css/calendar.emperor-penguin.css">
@@ -735,6 +737,7 @@
                 <option value="be-yourself">Be Yourself</option>
                 <option value="big-dream">Big Dream</option>
                 <option value="big-fashion">Big Fashion</option>
+                <option value="big-pacific">Big Pacific</option>
                 <option value="black-bird">Black Bird</option>
                 <option value="black-coffee">Black Coffee</option>
                 <option value="black-fashion">Black Fashion</option>
@@ -837,6 +840,7 @@
                 <option value="dramatic-coastline">Dramatic Coastline</option>
                 <option value="dream-adventure">Dream Adventure</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
+                <option value="early-dreams">Early Dreams</option>
                 <option value="emerald-stream">Emerald Stream</option>
                 <option value="emerald-water">Emerald Water</option>
                 <option value="emperor-penguin">Emperor Penguin</option>
